Wrote the README and go  a licence

--- a/create.html
+++ b/create.html
@@ -177,6 +177,7 @@
     </table>
     <div id="inputstuff" class="modal">
       <div class="modal-content">
+        <h1 style="color:black !important;">Jeopardy Multiplayer uses plain HTML to format questions and answers. So please do not XSS attack us.</h1>
         <div id="questionprob">
           <div id="box">
             <div class="toolbar">
